updated passing children in the jsx and mdx and propTypes.  fixed mdx spacing error so running again

--- a/src/components/form-controls/checkbox/checkbox.less
+++ b/src/components/form-controls/checkbox/checkbox.less
@@ -34,10 +34,8 @@
       &::after {
         background-color: @unchecked-background;
         border-radius: 0.3rem;
-        box-shadow: -1px 0 @unchecked-gray,
-          1px 0 @unchecked-gray,
-          0 -1px @unchecked-gray,
-          0 1px @unchecked-gray;
+        box-shadow: -1px 0 @unchecked-gray, 1px 0 @unchecked-gray,
+          0 -1px @unchecked-gray, 0 1px @unchecked-gray;
         box-sizing: border-box;
         content: '';
         height: 2rem;
@@ -96,10 +94,8 @@
       &::after {
         background-color: @checked-blue;
         border: 0.5rem solid @white;
-        box-shadow: -1px 0 @checked-blue,
-          1px 0 @checked-blue,
-          0 -1px @checked-blue,
-          0 1px @checked-blue;
+        box-shadow: -1px 0 @checked-blue, 1px 0 @checked-blue,
+          0 -1px @checked-blue, 0 1px @checked-blue;
       }
 
       // Hover
@@ -158,8 +154,7 @@
         &::after {
           background-color: @checked-disabled-gray;
           box-shadow: -1px 0 @checked-disabled-gray,
-            1px 0 @checked-disabled-gray,
-            0 -1px @checked-disabled-gray,
+            1px 0 @checked-disabled-gray, 0 -1px @checked-disabled-gray,
             0 1px @checked-disabled-gray;
         }
       }
@@ -177,10 +172,8 @@
         // The dot
         &::after {
           background-color: @checked-red;
-          box-shadow: -1px 0 @checked-red,
-            1px 0 @checked-red,
-            0 -1px @checked-red,
-            0 1px @checked-red;
+          box-shadow: -1px 0 @checked-red, 1px 0 @checked-red,
+            0 -1px @checked-red, 0 1px @checked-red;
         }
 
         // Hover
